LingoHub Update :rocket:
Manual push by LingoHub User: Nicolas Giard.
Project: Wiki.js

Made with :heart: by https://lingohub.com

--- a/server/locales/es/browser.json
+++ b/server/locales/es/browser.json
@@ -7,6 +7,24 @@
     "codeblocksuccess": "Tu bloque de código ha sido insertado",
     "codeblocktitle": "Insertar Bloque de Código",
     "discard": "Descartar",
+    "filedeleteaction": "Eliminar",
+    "filedeleteloading": "Eliminando archivo...",
+    "filedeletedefault": "este archivo",
+    "fileerror": "No se puede obtener el listado actualizado.",
+    "filefolderempty": "Esta carpeta está vacía",
+    "fileinsert": "Insertar Vínculo a Archivo",
+    "fileloading": "Obteniendo archivos ...",
+    "filemoveaction": "Mover a...",
+    "filemoveerror": "Error al mover: {{err}}",
+    "filemoveloading": "Moviendo archivo...",
+    "fileprocessing": "Procesando...",
+    "filerenameaction": "Renombrar",
+    "filesuccess": "El link al archivo ha sido insertado.",
+    "filetitle": "Insertar Archivo",
+    "fileupload": "Subir Archivo",
+    "folders": "Carpetas",
+    "foldersloading": "Obteniendo la lista de carpetas ...",
+    "newfolder": "Nueva carpeta",
     "videoanymp4file": "Cualquier archivo MP4 estándar",
     "videoinsert": "Insertar Video",
     "videolinktitle": "Ingresar el link al video a ser embebido",
@@ -35,6 +53,8 @@
     "createuserprovider": "Proveedor:",
     "createusertitle": "Crear / Autorizar usuario",
     "delete": "Eliminar",
+    "deletefiletitle": "¿Eliminar?",
+    "deletefilewarn": "¿Confirmas que deseas eliminar?",
     "deleteusertitle": "¿Eliminar cuenta de usuario?",
     "deleteuserwarning": "¿Confirma que desea eliminar esta cuenta de usuario? Esta acción no se puede deshacer!",
     "discard": "Descartar",
@@ -45,8 +65,22 @@
     "move": "Mover",
     "movepageinvalid": "¡Esta ruta es inválida o no está permitida!",
     "movepagepath": "Ingrese la nueva ruta de página:",
+    "movepageplaceholder": "nombre-de-pagina",
     "movepagetitle": "Mover página",
-    "movepagewarning": "Mover o renombrar páginas puede romper los enlaces. Asegúrese de editar las páginas que enlazan a esta página!"
+    "movepagewarning": "Mover o renombrar páginas puede romper los enlaces. Asegúrese de editar las páginas que enlazan a esta página!",
+    "newfolderinvalid": "¡Este nombre de carpeta no es válido!",
+    "newfolderloading": "Creando nueva carpeta...",
+    "newfoldername": "Ingresar el nuevo nombre de carpeta:",
+    "newfoldernameplaceholder": "nombre de la carpeta",
+    "newfoldersuccess": "Nueva carpeta {{name}} creada.",
+    "newfoldertitle": "Nueva Carpeta",
+    "renamefile": "Renombrar",
+    "renamefileerror": "Error al Renombrar: {{err}}",
+    "renamefileinvalid": "¡Este nombre de archivo no es válido!",
+    "renamefileloading": "Renombrando archivo...",
+    "renamefilename": "Introduzca el nuevo nombre del archivo (sin la extensión):",
+    "renamefilenameplaceholder": "Nombre del archivo",
+    "renamefiletitle": "Renombrar Archivo"
   },
   "nav": {
     "home": "Página principal"
