--- a/server/locales/zh/browser.json
+++ b/server/locales/zh/browser.json
@@ -7,6 +7,24 @@
     "codeblocksuccess": "您的代码块已插入。",
     "codeblocktitle": "插入代码块",
     "discard": "放弃",
+    "filedeleteaction": "删除",
+    "filedeleteloading": "删除文件...",
+    "filedeletedefault": "这个文件",
+    "fileerror": "无法获取更新的列表。",
+    "filefolderempty": "这个文件夹是空的。",
+    "fileinsert": "插入文件的链接",
+    "fileloading": "获取文件...",
+    "filemoveaction": "移动到",
+    "filemoveerror": "移动出错：{{err}}",
+    "filemoveloading": "移动文件...",
+    "fileprocessing": "处理...",
+    "filerenameaction": "重命名",
+    "filesuccess": "已插入文件链接。",
+    "filetitle": "插入文件",
+    "fileupload": "上传文件",
+    "folders": "文件夹",
+    "foldersloading": "获取文件夹列表",
+    "newfolder": "新文件夹",
     "videoanymp4file": "任何标准的MP4文件",
     "videoinsert": "插入视频",
     "videolinktitle": "输入要嵌入的视频的链接：",
@@ -35,6 +53,8 @@
     "createuserprovider": "供应商",
     "createusertitle": "创建/授权用户",
     "delete": "删除",
+    "deletefiletitle": "删除？",
+    "deletefilewarn": "你确定你要删除",
     "deleteusertitle": "删除用户帐号？",
     "deleteuserwarning": "您确定要删除此用户帐户吗？此操作无法撤销！",
     "discard": "放弃",
@@ -47,7 +67,20 @@
     "movepagepath": "输入新页面路径：",
     "movepageplaceholder": "页面名称",
     "movepagetitle": "移动页面",
-    "movepagewarning": "请注意，如有其他页面链接到此页面，移动或重命名本页面后需要更新该其他页面，否则该其他页面的指向本页面链接将不准确！"
+    "movepagewarning": "请注意，如有其他页面链接到此页面，移动或重命名本页面后需要更新该其他页面，否则该其他页面的指向本页面链接将不准确！",
+    "newfolderinvalid": "文件夹名称无效！",
+    "newfolderloading": "创建新文件夹",
+    "newfoldername": "输入新文件夹名称",
+    "newfoldernameplaceholder": "文件夹名称",
+    "newfoldersuccess": "已创建新文件夹{{name}}。",
+    "newfoldertitle": "新建文件夹",
+    "renamefile": "重命名",
+    "renamefileerror": "重命名错误：{{err}}",
+    "renamefileinvalid": "此文件名无效！",
+    "renamefileloading": "重命名文件...",
+    "renamefilename": "输入文件的新文件名（不带扩展名）：",
+    "renamefilenameplaceholder": "文件名",
+    "renamefiletitle": "重命名文件"
   },
   "nav": {
     "home": "首页"
