refactor: editor-file.vue -> upload, move, delete

--- a/server/locales/en/browser.json
+++ b/server/locales/en/browser.json
@@ -10,6 +10,7 @@
     "filedeleteaction": "Delete",
     "filedeleteloading": "Deleting file...",
     "filedeletedefault": "this file",
+    "filedeletesuccess": "File deleted successfully.",
     "fileerror": "Unable to fetch updated listing.",
     "filefolderempty": "This folder is empty.",
     "fileinsert": "Insert Link to File",
@@ -17,11 +18,14 @@
     "filemoveaction": "Move to...",
     "filemoveerror": "Move error: {{err}}",
     "filemoveloading": "Moving file...",
+    "filemovesuccess": "File moved successfully.",
     "fileprocessing": "Processing...",
     "filerenameaction": "Rename",
     "filesuccess": "File link has been inserted.",
     "filetitle": "Insert File",
     "fileupload": "Upload File",
+    "fileuploaderror": "Upload Error: {{err}}",
+    "fileuploadsuccess": "File(s) uploaded successfully.",
     "folders": "Folders",
     "foldersloading": "Fetching folders list...",
     "newfolder": "New Folder",
