refactor: editor-file.vue -> image + localization

--- a/server/locales/en/browser.json
+++ b/server/locales/en/browser.json
@@ -23,11 +23,19 @@
     "filerenameaction": "Rename",
     "filesuccess": "File link has been inserted.",
     "filetitle": "Insert File",
-    "fileupload": "Upload File",
+    "fileupload": "Upload File(s)",
     "fileuploaderror": "Upload Error: {{err}}",
     "fileuploadsuccess": "File(s) uploaded successfully.",
     "folders": "Folders",
     "foldersloading": "Fetching folders list...",
+    "imagetitle": "Insert Image",
+    "imageinsert": "Insert Image",
+    "imagesuccess": "Image has been inserted.",
+    "imageupload": "Upload Image(s)",
+    "imagealignleft": "Left (default)",
+    "imagealigncenter": "Centered",
+    "imagealignright": "Right",
+    "imagealignlogo": "Page Logo",
     "newfolder": "New Folder",
     "videoanymp4file": "Any standard MP4 file",
     "videoinsert": "Insert Video",
