refactor: admin-edit-user -> vue + fixes

--- a/server/locales/en/common.json
+++ b/server/locales/en/common.json
@@ -22,6 +22,7 @@
     "discard": "Discard",
     "edit": "Edit",
     "history": "History",
+    "home": "Home",
     "login": "Login",
     "logout": "Logout",
     "move": "Move",
