--- a/server/locales/en/browser.json
+++ b/server/locales/en/browser.json
@@ -70,8 +70,8 @@
     "deleteusertitle": "Delete User Account?",
     "deleteuserwarning": "Are you sure you want to delete this user account? This action cannot be undone!",
     "discard": "Discard",
-    "discardpagecreate": "Are you sure you want to leave this page and loose anything you wrote so far?",
-    "discardpageedit": "Are you sure you want to leave this page and loose any modifications?",
+    "discardpagecreate": "Are you sure you want to leave this page and lose anything you wrote so far?",
+    "discardpageedit": "Are you sure you want to leave this page and lose any modifications?",
     "discardpagestay": "Stay on page",
     "discardpagetitle": "Discard?",
     "move": "Move",
