LingoHub Update :rocket:
Manual push by LingoHub User: Nicolas Giard.
Project: Wiki.js

Made with :heart: by https://lingohub.com

--- a/server/locales/es/admin.json
+++ b/server/locales/es/admin.json
@@ -1,8 +1,14 @@
 {
   "profile": {
+    "displayname": "Nombre para mostrar",
+    "displaynameexample": "Juan Pérez",
+    "email": "Correo electrónico",
     "lastprofileupdate": "Última actualización de perfil",
     "membersince": "Miembro desde",
+    "password": "Contraseña",
+    "passwordverify": "Confirmar Contraseña",
     "provider": "Proveedor",
+    "savechanges": "Guardar Cambios",
     "subtitle": "Perfil e información de autenticación"
   },
   "stats": {
