--- a/server/locales/es/browser.json
+++ b/server/locales/es/browser.json
@@ -10,6 +10,7 @@
     "filedeleteaction": "Eliminar",
     "filedeleteloading": "Eliminando archivo...",
     "filedeletedefault": "este archivo",
+    "filedeletesuccess": "Archivo eliminado correctamente.",
     "fileerror": "No se puede obtener el listado actualizado.",
     "filefolderempty": "Esta carpeta está vacía",
     "fileinsert": "Insertar Vínculo a Archivo",
@@ -17,13 +18,24 @@
     "filemoveaction": "Mover a...",
     "filemoveerror": "Error al mover: {{err}}",
     "filemoveloading": "Moviendo archivo...",
+    "filemovesuccess": "Archivo movido correctamente.",
     "fileprocessing": "Procesando...",
     "filerenameaction": "Renombrar",
     "filesuccess": "El link al archivo ha sido insertado.",
     "filetitle": "Insertar Archivo",
-    "fileupload": "Subir Archivo",
+    "fileupload": "Subir Archivo(s)",
+    "fileuploaderror": "Error en la subida: {{err}}",
+    "fileuploadsuccess": "Archivo(s) cargados correctamente.",
     "folders": "Carpetas",
     "foldersloading": "Obteniendo la lista de carpetas ...",
+    "imagetitle": "Insertar imagen",
+    "imageinsert": "Insertar imagen",
+    "imagesuccess": "La imagen ha sido insertada.",
+    "imageupload": "Subir imagen(es)",
+    "imagealignleft": "Izquierda (predeterminado)",
+    "imagealigncenter": "Centrado",
+    "imagealignright": "Derecha",
+    "imagealignlogo": "Logo de la página",
     "newfolder": "Nueva carpeta",
     "videoanymp4file": "Cualquier archivo MP4 estándar",
     "videoinsert": "Insertar Video",
@@ -84,14 +96,6 @@
   },
   "nav": {
     "home": "Página principal"
-  },
-  "profile": {
-    "displayname": "Nombre para mostrar",
-    "displaynameexample": "Juan Pérez",
-    "email": "Correo electrónico",
-    "password": "Contraseña",
-    "passwordverify": "Confirmar Contraseña",
-    "savechanges": "Guardar Cambios"
   },
   "search": {
     "didyoumean": "Quisiste decir...?",
