--- a/server/locales/fr/browser.json
+++ b/server/locales/fr/browser.json
@@ -10,6 +10,7 @@
     "filedeleteaction": "Supprimer",
     "filedeleteloading": "Suppression du fichier...",
     "filedeletedefault": "ce fichier",
+    "filedeletesuccess": "Fichier supprimé avec succès.",
     "fileerror": "Échec de mise à jour de la liste.",
     "filefolderempty": "Ce dossier est vide.",
     "fileinsert": "Insérer un lien vers le fichier",
@@ -17,13 +18,24 @@
     "filemoveaction": "Déplacer vers...",
     "filemoveerror": "Erreur de déplacement: {{err}}",
     "filemoveloading": "Déplacement du fichier ...",
+    "filemovesuccess": "Le fichier a été déplacé avec succès.",
     "fileprocessing": "En traitement...",
     "filerenameaction": "Renommer",
     "filesuccess": "Le lien vers le fichier a été inséré.",
     "filetitle": "Insérer un fichier",
     "fileupload": "Téléverser un fichier",
+    "fileuploaderror": "Erreur de téléversement: {{err}}",
+    "fileuploadsuccess": "Fichier(s) téléversé(s) avec succès.",
     "folders": "Dossiers",
     "foldersloading": "Récupérer la liste des dossiers ...",
+    "imagetitle": "Insérer une image",
+    "imageinsert": "Insérer l'image",
+    "imagesuccess": "L'image a été insérée.",
+    "imageupload": "Téléverser des images",
+    "imagealignleft": "Gauche (par défaut)",
+    "imagealigncenter": "Centré",
+    "imagealignright": "Droite",
+    "imagealignlogo": "Logo de la page",
     "newfolder": "Nouveau dossier",
     "videoanymp4file": "Tout fichier MP4 standard",
     "videoinsert": "Insérer la vidéo",
@@ -84,14 +96,6 @@
   },
   "nav": {
     "home": "Accueil"
-  },
-  "profile": {
-    "displayname": "Nom complet",
-    "displaynameexample": "Jean Dupont",
-    "email": "Courriel",
-    "password": "Mot de passe",
-    "passwordverify": "Vérification du mot de passe",
-    "savechanges": "Sauvegarder"
   },
   "search": {
     "didyoumean": "Vouliez-vous dire...?",
