--- a/server/locales/ko/common.json
+++ b/server/locales/ko/common.json
@@ -24,12 +24,12 @@
     "history": "히스토리",
     "login": "로그인",
     "logout": "로그아웃",
-    "move": "옮김",
+    "move": "이동",
     "myprofile": "내 프로필",
     "normalview": "기본 보기",
     "savechanges": "변경사항 저장",
     "savedocument": "문서 저장",
-    "source": "출처",
+    "source": "소스",
     "stats": "통계",
     "syssettings": "시스템 설정",
     "users": "사용자",
