--- a/server/locales/pt/admin.json
+++ b/server/locales/pt/admin.json
@@ -1,8 +1,14 @@
 {
   "profile": {
+    "displayname": "Nome de Exibição",
+    "displaynameexample": "João Silva",
+    "email": "Email",
     "lastprofileupdate": "Última atualização do perfil",
     "membersince": "Membro desde",
+    "password": "Senha",
+    "passwordverify": "Verificar Senha",
     "provider": "Provider",
+    "savechanges": "Salvar Alterações",
     "subtitle": "Perfil e informações de autenticação"
   },
   "stats": {
