fix: Install fixes + localization home key

--- a/server/locales/en/common.json
+++ b/server/locales/en/common.json
@@ -27,6 +27,7 @@
     "move": "Move",
     "myprofile": "My Profile",
     "normalview": "Normal View",
+    "root": "Home",
     "savechanges": "Save Changes",
     "savedocument": "Save Document",
     "settings": "Settings",
