LingoHub Update :rocket:
Manual push by LingoHub User: Nicolas Giard.
Project: Wiki.js

Made with :heart: by https://lingohub.com

--- a/server/locales/es/common.json
+++ b/server/locales/es/common.json
@@ -27,6 +27,7 @@
     "move": "Mover",
     "myprofile": "Mi perfil",
     "normalview": "Vista normal",
+    "root": "Página principal",
     "savechanges": "Guardar Cambios",
     "savedocument": "Guardar documento",
     "settings": "Ajustes",
