--- a/server/locales/fr/common.json
+++ b/server/locales/fr/common.json
@@ -27,6 +27,7 @@
     "move": "Déplacer",
     "myprofile": "Mon Profil",
     "normalview": "Vue normale",
+    "root": "Home",
     "savechanges": "Sauvegarder",
     "savedocument": "Sauvegarder",
     "settings": "Paramètres",
