--- a/server/locales/zh/common.json
+++ b/server/locales/zh/common.json
@@ -27,6 +27,7 @@
     "move": "移动",
     "myprofile": "我的信息",
     "normalview": "正常视图",
+    "root": "首页",
     "savechanges": "保存",
     "savedocument": "保存文档",
     "settings": "设置",
