fix: nav.root french translation

--- a/server/locales/fr/common.json
+++ b/server/locales/fr/common.json
@@ -27,7 +27,7 @@
     "move": "Déplacer",
     "myprofile": "Mon Profil",
     "normalview": "Vue normale",
-    "root": "Home",
+    "root": "Accueil",
     "savechanges": "Sauvegarder",
     "savedocument": "Sauvegarder",
     "settings": "Paramètres",
