--- a/server/locales/en/browser.json
+++ b/server/locales/en/browser.json
@@ -97,6 +97,10 @@
   "nav": {
     "home": "Home"
   },
+  "profile": {
+    "tfaenabled": "Enabled",
+    "tfadisabled": "Disabled"
+  },
   "search": {
     "didyoumean": "Did you mean...?",
     "nomatch": "No results matching your query",
