--- a/server/locales/en/common.json
+++ b/server/locales/en/common.json
@@ -33,6 +33,7 @@
     "settings": "Settings",
     "source": "Source",
     "stats": "Stats",
+    "sysinfo": "System Info",
     "syssettings": "System Settings",
     "theme": "Color Theme",
     "users": "Users",
