LingoHub Update :rocket:
Manual push by LingoHub User: Nicolas Giard.
Project: Wiki.js

Made with :heart: by https://lingohub.com

--- a/server/locales/de/admin.json
+++ b/server/locales/de/admin.json
@@ -18,7 +18,9 @@
     "users": "Benutzer"
   },
   "settings": {
-    "subtitle": "Verwalte Seitenkonfiguration",
+    "subtitle": "Verwalte Seitenkonfiguration"
+  },
+  "system": {
     "systemversion": "Systemversion",
     "currentversion": "Aktuelle Version",
     "latestversion": "Letzte Version",
