--- a/server/locales/en/admin.json
+++ b/server/locales/en/admin.json
@@ -58,7 +58,7 @@
     "altcolor": "Alternate Color",
     "altcolordesc": "Used for the sidebar (in a darker tone)",
     "footercolor": "Footer Color",
-    "footercolordesc": "Used for the foter (in a lighter tone)",
+    "footercolordesc": "Used for the footer (in a lighter tone)",
     "codeblock": {
       "title": "Code Blocks",
       "dark": "Use Dark Theme",
