--- a/server/locales/es/common.json
+++ b/server/locales/es/common.json
@@ -33,6 +33,7 @@
     "settings": "Ajustes",
     "source": "Fuente",
     "stats": "Estadísticas",
+    "sysinfo": "Información del sistema",
     "syssettings": "Ajustes del sistema",
     "theme": "Tema de Colores",
     "users": "Usuarios",
