--- a/server/locales/fr/common.json
+++ b/server/locales/fr/common.json
@@ -33,6 +33,7 @@
     "settings": "Paramètres",
     "source": "Source",
     "stats": "Statistiques",
+    "sysinfo": "Informations système",
     "syssettings": "Paramètres système",
     "theme": "Thème de couleur",
     "users": "Utilisateurs",
