--- a/server/locales/nl/git.json
+++ b/server/locales/nl/git.json
@@ -1,1 +1,6 @@
-{ }
+{
+  "added": "{{path}} toegevoegd",
+  "deleted": "{{path}} verwijderd/hernoemd",
+  "updated": "{{path}} bijgewerkt",
+  "uploaded": "{{path}} is geüpload"
+}
