--- a/server/locales/zh/common.json
+++ b/server/locales/zh/common.json
@@ -33,6 +33,7 @@
     "settings": "设置",
     "source": "源文件",
     "stats": "统计",
+    "sysinfo": "系统信息",
     "syssettings": "系统设置",
     "theme": "颜色方案",
     "users": "用户",
