--- a/server/locales/pt/admin.json
+++ b/server/locales/pt/admin.json
@@ -18,7 +18,9 @@
     "users": "Usuários"
   },
   "settings": {
-    "subtitle": "Gerenciar configurações do site",
+    "subtitle": "Gerenciar configurações do site"
+  },
+  "system": {
     "systemversion": "Versão do Sistema",
     "currentversion": "Versão Atual",
     "latestversion": "Última Versão",
