--- a/server/locales/pt/admin.json
+++ b/server/locales/pt/admin.json
@@ -25,7 +25,7 @@
     "currentversion": "Versão Atual",
     "latestversion": "Última Versão",
     "upgrade": "Atualizar",
-    "reinstall": "Re-instalar versão atual",
+    "reinstall": "Reinstalar versão atual",
     "versioncheckfailed": "Não é possível consultar a versão mais recente. Tente mais tarde.",
     "administrativetools": "Ferramentas Administrativas",
     "flushcache": "Limpar o cache e reconstruir índices",
