--- a/server/locales/pt/common.json
+++ b/server/locales/pt/common.json
@@ -21,7 +21,7 @@
     "create": "Criar",
     "discard": "Descartar",
     "edit": "Editar",
-    "history": "Historico",
+    "history": "Histórico",
     "login": "Login",
     "logout": "Sair",
     "move": "Mover",
@@ -31,7 +31,7 @@
     "savedocument": "Salvar Documento",
     "settings": "Configurações",
     "source": "Fonte",
-    "stats": "Statatísticas",
+    "stats": "Estatísticas",
     "syssettings": "Configurações do Sistema",
     "theme": "Tema de Cor",
     "users": "Usuários",
